5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1734_2496.log
== TEST (2019-05-09 18:20:23) 
-- CODE:
n= int(input("digite um numero: "))
cont= 0
while (n!= -1):
	cont= cont+n
n= int(input("digite um numero: "))
print(cont)
	
	
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:20:57) 
-- CODE:
n= int(input("digite um numero: "))
cont= 0
while (n!= -1):
	cont= cont+n
   n= int(input("digite um numero: "))
print(cont)
	
	
-- ERROR:
File "XXXX", line 5
    n= int(input())
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:21:04) 
-- CODE:
n= int(input("digite um numero: "))
cont= 0
while (n!= -1):
	cont= cont+n
	n= int(input("digite um numero: "))
print(cont)
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:21:17) 
-- CODE:
n= int(input("digite um numero: "))
cont= 0
while (n!= -1):
	cont= cont+n
	n= int(input("digite um numero: "))
print(cont)
	
	
-- EXECUTION TIME:
0.137671
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
